
syntax = "proto3";

option go_package = "https://github.com/michealmikeyb/ffv/tags";

package ffv;

service TagService {
  rpc LikeTag(Tag) returns (BaseResponse) {}
  rpc DisikeTag(Tag) returns (BaseResponse) {}
  rpc LikeTags(Tags) returns (BaseResponse) {}
  rpc DisikeTags(Tags) returns (BaseResponse) {}
}

message Tag {
  string name = 1;
  string id = 2;
}

message Tags {
  repeated Tag tags = 1;
}

message BaseResponse {
  string status = 1;
  string error = 2;
}
